@@ -1,3 +1,7 @@
+2024-09-15 Konstantin Kushnir <chpock@gmail.com>
+	* Fix a bug with opening local files when their path starts as a VFS mount
+	point
+
 2024-09-14 Konstantin Kushnir <chpock@gmail.com>
 	* Fix -eofchar issue on Windows and Tcl 9.0b3
 
